mudanças no post e de aspeto geral ao correr o codigo